syntax = "proto3";

import "google/api/annotations.proto";


option java_multiple_files = false;
 option java_package = "com.apiiro.avigtest.protoapi";

package protoapi;

service ProtoServer2 {
  rpc GetPerson (PersonRequest2) returns (Person2) {
    option (google.api.http) = {
      get : "/url2"
    };

  }
  rpc GetFullPerson (PersonRequest2) returns (Person2) {
    option (google.api.http).post = "/v2";
    option (google.api.http).body = "*";

  }
  rpc StreamClientStatus(stream PersonRequest2) returns (stream Person2) {

  }
}
message PersonRequest2 {
  string name = 1;
}

message Person2 {
  string name = 1;
  int32 id = 2;
  string email = 3;
  string username = 4;
  string ownerName = 5;
  string creditCardNumber = 6;
}

